2008-09-26  Cedric GESTES  <gestes@aldebaran-robotics.com>
	* vim : added some more config!

2008-09-24  Cedric GESTES  <ctaf42@gmail.com>
	* zsh : disable autocorrect..it doesnt keep the cache uptodate for command	* ion3 : added basic support


2008-09-24 GESTES Cedric <ctaf42@gmail.com>
	* ct-date : fixed

2008-07-08  ctaf  <gestes@aldebaran-robotics.com>
	* env : added debfullname

2008-07-05  Cedric GESTES  <ctaf42@gmail.com>
	* zsh: better url handling (handle metachar like ampersands)

2008-06-28  GESTES Cedric  <ctaf42@gmail.com>
	* emacs: speedbar is in black too

2008-06-02  Cedric GESTES  <gestes@aldebaran-robotics.com>
	* emacs : sane default
	* emacs : added igrep.el

2008-05-31  GESTES Cedric  <ctaf42@gmail.com>
	* etc/emacs/templates/cmake.tpl: added version of cmake

2008-05-30 GESTES Cedric <ctaf42@gmail.com>
	* bash : prompt look like zsh prompt
	* emacs : tabbar grouped c/c++ mode
	* emacs : added CMakeLists.txt template
	* ctafconf : update work again on windobe
	* alias : ls is colored
	* alias : unset alias on ls when it fail

2008-05-26  Cedric GESTES  <gestes@aldebaran-robotics.com>
	* g : git shortcut
	* gsvn : git svn shortcut!

2008-05-17  GESTES Cedric <ctaf42@gmail.com>
	* emacs : Makefile template support c++

2008-05-11 GESTES Cedric <ctaf42@gmail.com>
	* ctafconf : could be installed in a directory with space !!

2008-03-29  GESTES Cedric <ctaf42@gmail.com>
	* ct-git : poor warper around git and git svn

2008-03-22  GESTES Cedric  <ctaf42@gmail.com>
	* emacs : freaking support for gdb: just try f8
	* emacs ([f3]): igrep/igrep-find
	* emacs (f11) : toggle gdb windows on/off
	* emacs (c-f1) : describe function under cursor
	* emacs : semantic working completion \o/

2008-03-20  Cedric GESTES  <gestes@aldebaran-robotics.com>
	* emacs : support bitbake

2008-03-16  Cedric GESTES  <ctaf42@gmail.com>
	* ct-installconf : add folder perso/emacs-backup for emacs
	* emacs : store backup in perso/emacs-backup

