@@ -5,7 +5,7 @@
 ## Login   <ctaf42@gmail.com>
 ##
 ## Started on  Sun Sep 25 21:51:34 2005 GESTES Cedric
-## Last update Tue Feb 26 01:41:21 2008 Cedric GESTES
+## Last update Tue Sep 30 02:58:16 2008 Cedric GESTES
 ##
 ##CTAFCONF
 
@@ -168,14 +168,14 @@ fi
 
 ctafconf_wm=$(getvaldef "$ctafconf_wm" 'gnome' )
 SSFT_DEFAULT=$ctafconf_wm
-if ssft_select_single "Window Manager" "Choose your desktop environmment from the list (if you use gdm/kdm this will only change the session named XClient)" fluxbox gnome kde xfce4 e16 term aterm; then
+if ssft_select_single "Window Manager" "Choose your desktop environmment from the list (if you use gdm/kdm this will only change the session named XClient)" random ion3 fluxbox gnome kde xfce4 e16 e17 term aterm; then
     ctafconf_wm=$(getvaldef "$SSFT_RESULT" "$ctafconf_wm" )
 fi
 
 ctafconf_backlist=$(getvaldef "$ctafconf_backlist" 'xsession' )
 SSFT_DEFAULT=$(echo "$ctafconf_backlist" | sed -e 's/ /\n/');
 echo "default: $SSFT_DEFAULT";
-local msg="Select packages you want to backlist, they will never be installed by the ctafconf"
+msg="Select packages you want to backlist, they will never be installed by the ctafconf"
 ssft_select_multiple "Install" \
                      "$msg" \
                      `ls -1 $grkdir | grep ".grk$" | sed -e s/.grk//`
